--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                     <div class="info">
                         <span class="category">Wakil Direktur</span>
                         <span class="date"></span>
-                        <h3>Ojaan</h3>
+                        <h3>H. Armando Jann R. S.T</h3>
                         <p>Wakil Direktur Fullstate Network.</p>
                     </div>
                 </div>
@@ -729,7 +729,7 @@
                     <div class="info">
                         <span class="category">Kepala Direksi</span>
                         <span class="date"></span>
-                        <h3>Bariq</h3>
+                        <h3>Bariq Wicaksono</h3>
                         <p>Kepala Direksi Fullstate Network.</p>
                     </div>
                 </div>
@@ -738,7 +738,7 @@
                     <div class="info">
                         <span class="category">Wakil Kepala Direksi</span>
                         <span class="date"></span>
-                        <h3>Welly</h3>
+                        <h3>Welly Dj</h3>
                         <p>Wakil Kepala Direksi Fullstate Network.</p>
                     </div>
                 </div>
