--- a/index.html
+++ b/index.html
@@ -785,6 +785,7 @@
                         <option value="art">Seni</option>
                         <option value="information">Informasi</option>
                         <option value="fight">Perang/Pertempuran</option>
+                        <option value="traffic">Lalu Lintas</option>
                     </select>
                     <input type="text" id="news-title" placeholder="Judul Berita" required>
                     <textarea id="news-content" placeholder="Isi Berita" rows="4" required></textarea>
@@ -882,7 +883,8 @@
             'sport': 'Olahraga',
             'art': 'Seni',
             'information': 'Informasi',
-            'fight': 'Perang/Pertempuran'
+            'fight': 'Perang/Pertempuran',
+            'traffic': 'Lalu Lintas'
         };
 
         function getTranslatedCategory(category) {
