--- a/index.html
+++ b/index.html
@@ -826,7 +826,8 @@
             <div class="footer-section">
                 <h4>Jam Operasional</h4>
                 <ul>
-                    <li>Senin - Minggu: 15:00 - 21:30</li>
+                    <li>Senin - Minggu: 15:00 - 21:30 (OOC)</li>
+                    <li>Senin - Minggu: 00:00 - 24:00 (IC)</li>
                 </ul>
             </div>
             <div class="footer-section">
