--- a/index.html
+++ b/index.html
@@ -674,8 +674,8 @@
     </div>
     <div id="home" class="content active">
         <div class="hero">
-            <h1>SELALU UPDATE SETIAP MINGGU</h1>
-            <p>Fullstate Network adalah platform terpercaya yang menyiarkan berita di Fullstate, memberikan informasi terkini setiap minggu.</p>
+            <h1>SELALU UPDATE SETIAP SAAT</h1>
+            <p>Fullstate Network adalah platform terpercaya yang menyiarkan berita di Fullstate, memberikan informasi terkini setiap saat.</p>
             <div class="buttons">
                 <button id="check-news-btn" class="check-btn" onclick="showPage('news-list')">Cek Berita Terbaru</button>
             </div>
