--- a/index.html
+++ b/index.html
@@ -795,11 +795,11 @@
             <div class="grid">
                 <div class="card">
                     <img src="Pengumuman\Pengumuman1.png" alt="Pengumuman 1">
-                    <p>Pengumuman penting mengenai jadwal siaran baru Fullstate Network. Silakan periksa detail lebih lanjut!</p>
+                    <p>Untuk saat ini belum ada pengumuman yang diberikan oleh Fullstate Network.</p>
                 </div>
                 <div class="card">
                     <img src="Pengumuman\Pengumuman2.png" alt="Pengumuman 2">
-                    <p>Pembukaan lowongan kerja untuk posisi jurnalis. Daftar sekarang untuk bergabung dengan tim kami!</p>
+                    <p>Untuk saat ini belum ada pengumuman yang diberikan oleh Fullstate Network.</p>
                 </div>
             </div>
         </div>
