--- a/index.html
+++ b/index.html
@@ -925,25 +925,25 @@
     <div id="recruitment" class="content">
         <div class="recruitment">
             <h2>Rekrutmen Fullstate Network</h2>
-            <p>Bergabunglah dengan tim kami di Fullstate Network! Kami sedang mencari individu yang bersemangat dan berdedikasi untuk menjadi bagian dari penyiar berita terkemuka di Fullstate. Lihat posisi yang tersedia di bawah ini dan kirimkan lamaran Anda.</p>
+            <p>Bergabunglah dengan tim kami di Fullstate Network! Kami sedang mencari individu yang bersemangat dan berdedikasi untuk menjadi bagian dari penyiar berita terkemuka di Kota Fullstate. Lihat posisi yang tersedia di bawah ini dan cek jadwal interviewnya.</p>
             <div class="job-listings">
                 <h3>Posisi yang Tersedia</h3>
                 <div class="grid">
                     <div class="card">
-                        <h3>Jurnalis</h3>
-                        <p>Kami mencari jurnalis berpengalaman untuk meliput berita terkini di Fullstate. Kirimkan CV dan portofolio Anda ke email kami.</p>
+                        <h3>Reporter Lapangan</h3>
+                        <p>Kami mencari reporter yang dapat mengambil gambar di lapangan dengan kualitas tinggi dan mudah diketahui.</p>
                     </div>
                     <div class="card">
-                        <h3>Editor Berita</h3>
-                        <p>Editor berita diperlukan untuk memastikan kualitas dan akurasi konten kami. Pengalaman minimal 3 tahun di bidang jurnalisme.</p>
+                        <h3>None</h3>
+                        <p>Belum ada posisi lain yang ditentukan oleh Direktur Fullstate Network.</p>
                     </div>
                     <div class="card">
-                        <h3>Desainer Grafis</h3>
-                        <p>Kami membutuhkan desainer grafis kreatif untuk membuat visual yang mendukung berita kami. Kirimkan portofolio desain Anda.</p>
+                        <h3>None</h3>
+                        <p>Belum ada posisi lain yang ditentukan oleh Direktur Fullstate Network.</p>
                     </div>
                 </div>
             </div>
-            <p>Untuk melamar, silakan kirimkan CV dan surat lamaran ke <a href="mailto:recruitment@fullstatenetwork.com">recruitment@fullstatenetwork.com</a>.</p>
+            <p>Untuk mendaftar silakan cek <a href="https://discord.gg/F3VncWG53t">Jadwal Interview</a> dan tunggu <a href="https://discord.gg/cUxBMkB9Uc">Hasil Kelulusan</a> .</p>
         </div>
     </div>
     <div id="login-modal">
