--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FN | Fullstate Network</title>
+    <title>Fullstate Network</title>
     <link rel="icon" type="image/x-icon" href="Fullstate Network.ico">
     <style>
         * {
