--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
                     </div>
                 </div>
             </div>
-            <p>Untuk mendaftar silakan cek <a href="https://discord.gg/F3VncWG53t">Jadwal Interview</a> dan tunggu <a href="https://discord.gg/cUxBMkB9Uc">Hasil Kelulusan</a> .</p>
+            <p>Untuk mendaftar silakan cek <a href="https://discord.gg/F3VncWG53t">Informasi Pendaftaran</a> dan tunggu <a href="https://discord.gg/cUxBMkB9Uc">Hasil Kelulusan</a> anda.</p>
         </div>
     </div>
     <div id="login-modal">
