--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
                     <div class="card">
                         <img src="Live Camera Icon.png" alt="Live Update">
                         <h3>LIVE UPDATE</h3>
-                        <h3>Dapatkan pembaruan berita langsung dengan proses yang efisien.</p>
+                        <p>Dapatkan pembaruan berita langsung dengan proses yang efisien.</p>
                     </div>
                     <div class="card">
                         <img src="Arsip Berita.png" alt="Arsip Berita">
